--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.dili</groupId>
     <artifactId>glasses-parent</artifactId>
     <name>glasses-parent</name>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
     <!--<version>1.0.0.RELEASE</version>-->
     <description>父项目</description>
     <packaging>pom</packaging>
@@ -37,7 +37,7 @@
         <targetXMLPackage>mapper</targetXMLPackage>
         <!-- 依赖版本 -->
         <springloaded.version>1.2.8.RELEASE</springloaded.version>
-        <sharp-sword.version>3.3.1-SNAPSHOT</sharp-sword.version>
+        <sharp-sword.version>3.6.6-SNAPSHOT</sharp-sword.version>
         <lombok.version>1.18.2</lombok.version>
     </properties>
 
