--- a/registry/pom.xml
+++ b/registry/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <artifactId>glasses-parent</artifactId>
         <groupId>com.dili</groupId>
-        <version>1.0.0</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <profiles>
