--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,11 @@
     <description>父项目</description>
     <packaging>pom</packaging>
 
+    <parent>
+        <groupId>com.dili</groupId>
+        <artifactId>dili-parent</artifactId>
+        <version>3.6.6-SNAPSHOT</version>
+    </parent>
     <modules>
         <module>server</module>
         <module>client</module>
